--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-	<meta charset="utf-8">
-  <title>Hello</title>
-  <link rel="stylesheet" href="index.css">
-</head>
-
-<body>
-	<div class="main" id="app"></div>
-	<script src="index.js"></script>
-</body>
-
+    <head>
+        <title>My result</title>
+        <link rel="stylesheet" href="index.css" />
+        </head>
+        <body>
+          <p><img src="https://static.toiimg.com/photo/msid-69690570/69690570.jpg?resizemode=4&width=400"> </p>
+          <p id ="paragraph">
+          <script src ="index.js">
+              
+          </script>
+          </p>
+        </body>
 </html>
