--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-	<meta charset="utf-8">
-  <title>Hello</title>
-  <link rel="stylesheet" href="index.css">
-</head>
-
-<body>
-	<div class="main" id="app"></div>
-	<script src="index.js"></script>
-</body>
-
+<html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <title>Test task</title>
+        <link rel="stylesheet" type="text/css" href="index.css" />
+    </head>
+    <body>
+        <form onsubmit="getMoviesByFilter()" class="container">
+            <div class="data">
+            <input type="text" id="txt" placeholder="Введите координаты..."/>
+            <input type="submit" value="Поиск">
+            </div>
+            <div class="result">
+                <h1><output id="output1">&nbsp;</output>
+                    <u><output id="output2"></output></u>
+                </h1>
+                
+            </div>
+        </form>
+        <script type="text/javascript" src="index.js"></script>
+    </body>
 </html>
