--- a/index.html
+++ b/index.html
@@ -1,15 +1,58 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <title>Test task</title>
-        <link rel="stylesheet" type="text/css" href="index.css" />
-    </head>
-    <body>
-        <div  class="container">
-						<input onclick="getMovies('latest')" type="button" value="Тест">
-						<div className="logo"></div>
-				</div>
-        <script type="text/javascript" src="index.js"></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Киноафиша</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+
+<body>
+
+    <style>
+        body {
+            background: rgb(29, 29, 32)
+        }
+
+        .container-1 {
+            display: flex
+        }
+
+        .container-1 div {
+            border: 1px solid gray
+        }
+
+        .box-1 {
+            flex: 1
+        }
+
+        .box-2 {
+            flex: 1
+        }
+
+        .box-3 {
+            flex: 1
+        }
+    </style>
+
+    <div class="container-2">
+        <img src="images/logo.svg" height="10%">
+    </div>
+    <div class="container-1">
+        <div class=box-1>
+            <img src="images/filter-1.jpg" height="30%" width="100%">
+            <h3 align="end" style="color: rgb(240, 248, 253)">Новинки 2018</h3>
+        </div>
+        <div class=box-2>
+            <img src="images/filter-2.jpg" height="30%" width="100%">
+            <h3 align="end" style="color: rgb(240, 248, 253)">Скоро в кинотеатрах</h3>
+        </div>
+        <div class=box-3>
+            <img src="images/filter-3.jpg" height="30%" width="100%">
+            <h3 align="end" style="color: rgb(240, 248, 253)">В топ-чартах</h3>
+        </div>
+    </div>
+    <script type="text/javascript" src="index.js"></script>
+</body>
+
 </html>
