--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Киноафиша</title>
-    <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
 <body>
-
     <style>
         body {
             background: rgb(29, 29, 32)
@@ -34,7 +31,6 @@
             flex: 1
         }
     </style>
-
     <div class="container-2">
         <img src="images/logo.svg" height="10%">
     </div>
@@ -52,7 +48,5 @@
             <h3 align="end" style="color: rgb(240, 248, 253)">В топ-чартах</h3>
         </div>
     </div>
-    <script type="text/javascript" src="index.js"></script>
 </body>
-
 </html>
