--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Киноафиша</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
 <body>
@@ -12,11 +13,12 @@
         }
 
         .container-1 {
-            display: flex
+            display: flex;
         }
 
         .container-1 div {
-            border: 1px solid gray
+            border: 1px solid gray;
+            justify-content: space-between
         }
 
         .box-1 {
@@ -28,25 +30,26 @@
         }
 
         .box-3 {
-            flex: 1
+            flex: 1;
         }
     </style>
     <div class="container-2">
-        <img src="images/logo.svg" height="10%">
+        <img src="images/logo.svg" height="8%">
     </div>
     <div class="container-1">
         <div class=box-1>
-            <img src="images/filter-1.jpg" height="30%" width="100%">
-            <h3 align="end" style="color: rgb(240, 248, 253)">Новинки 2018</h3>
+            <img src="images/filter-1.jpg" height="30%" width="100% ">
+            <h2 align="end" style="color: rgb(240, 248, 253)">Новинки 2018</h2>
         </div>
         <div class=box-2>
             <img src="images/filter-2.jpg" height="30%" width="100%">
-            <h3 align="end" style="color: rgb(240, 248, 253)">Скоро в кинотеатрах</h3>
+            <h2 align="end" style="color: rgb(240, 248, 253)">Скоро в кинотеатрах</h2>
         </div>
         <div class=box-3>
             <img src="images/filter-3.jpg" height="30%" width="100%">
-            <h3 align="end" style="color: rgb(240, 248, 253)">В топ-чартах</h3>
+            <h2 align="end" style="color: rgb(240, 248, 253)">В топ-чартах</h2>
         </div>
     </div>
 </body>
+
 </html>
