--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <div  class="container">
-						<input onclick="getMovies('latest')" type="button" value="Тест">
+                        <input onclick="getMovies('latest')" type="button" value="Новинки">
+                        <input onclick="getMovies('popular')" type="button" value="Популярные">
+                        <input onclick="getMovies('upcoming')" type="button" value="Ожидаемые">
 						<div className="logo"></div>
 				</div>
         <script type="text/javascript" src="index.js"></script>
