fix: index.html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
-        <title>My result</title>
-        <link rel="stylesheet" href="index.css" />
-        </head>
-        <body>
-          <p><img src="https://static.toiimg.com/photo/msid-69690570/69690570.jpg?resizemode=4&width=400"> </p>
-          <p id ="paragraph">
-          <script src ="index.js">
-              
-          </script>
-          </p>
-        </body>
+        <meta charset="utf-8">
+        <title>Test task</title>
+        <link rel="stylesheet" type="text/css" href="index.css" />
+    </head>
+    <body>
+        <div  class="container">
+						<input onclick="getMovies('latest')" type="button" value="Тест">
+						<div className="logo"></div>
+				</div>
+        <script type="text/javascript" src="index.js"></script>
+    </body>
 </html>
