--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
 <body>
     <style>
         body {
-            background: rgb(29, 29, 32)
+            background: #16161A;
         }
     </style>
     <div class="container-1">
-        <img src="images/logo.svg" height="8%" >
+        <img src="images/logo.svg" height="10%">
     </div>
     <div class="container-2">
         <div class=box-1>
-            <h1 align="end" style="color: rgb(240, 248, 253)">Новинки 2018</h1>
+            <div class="text">
+                <h2 align="end" style="color: rgb(240, 248, 253)">Новинки 2018</h2>
+            </div>
         </div>
         <div class=box-2>
-            <h1 align="end" style="color: rgb(240, 248, 253)">Скоро в кинотеатрах</h1>
+            <div class="text">
+                <h2 align="end" style="color: rgb(240, 248, 253)">Скоро в кинотеатрах</h2>
+            </div>
         </div>
         <div class=box-3>
-            <h1 align="end" style="color: rgb(240, 248, 253)">В топ-чартах</h1>
+            <div class="text">
+                <h2 align="end" style="color: rgb(240, 248, 253)">В топ-чартах</h2>
+            </div>
         </div>
     </div>
 </body>
