feature: new input

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             </div>
         </div>
     </div>
+    <div class="numb" style="text-align: center">
+        <input type="text" placeholder="Введите число" style="height: 7%; width: 30%; font-size: 100%;">
+    </div>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
