--- a/index.html
+++ b/index.html
@@ -6,12 +6,33 @@
         <link rel="stylesheet" type="text/css" href="index.css" />
     </head>
     <body>
-        <div  class="container">
-                        <input onclick="getMovies('latest')" type="button" value="Новинки">
+            <div  class="container">
+                        <!-- <input onclick="getMovies('latest')" type="button" value="Новинки">
                         <input onclick="getMovies('popular')" type="button" value="Популярные">
                         <input onclick="getMovies('upcoming')" type="button" value="Ожидаемые">
-						<div className="logo"></div>
-				</div>
+                        <div className="logo"></div> -->
+                <div class="width">
+                    <div class="logo"></div>
+                    <div class="wrapper">
+                        <div onclick="getMovies('latest')" class="latest">
+                            <span>Новинки</span>
+                        </div>
+                        <div onclick="getMovies('popular')" class="popular">
+                            <span>Популярные</span>
+                        </div>
+                        <div onclick="getMovies('upcoming')" class="upcoming">
+                            <span>Ожидаемые</span>
+                        </div>
+                    </div>
+                    <div class="quantity"> <input id="i1" type="text"></input>
+                        <button id="b1">Получить значение</button>
+                        <button id="b2">Изменить значение</button>
+                        <button id="b3">Показать значение</button>
+                    </div>
+                    <div class="film"><span>Мультфильм</span></div>
+                    <div class="multik"><span>7</span></div>
+                </div> 
+		    </div>
         <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
