--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
     </div>
     <div class="container-3">
         <div class="box-4">
+            <div class="text-2">
+                <h3>
+                    Мультфильм
+                </h3>
+                <div class="text-3">
+                    <h1>
+                        4.8
+                    </h1>
+                </div>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="index.js"></script>
