--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="form" style="text-align: center">
-      <input type="text" placeholder="Введите число" />
+      <input class="textInput" type="text" placeholder="Введите число" />
       <button class="button">Enter</button>
     </div>
     <div id="list">
