--- a/index.html
+++ b/index.html
@@ -7,44 +7,47 @@
 </head>
 
 <body>
-    <div class="container-1">
-        <img class="logo" onclick="getMovies('latest')" src="images/logo.svg">
+    <div class="logo">
+        <img onclick="getMovies('latest')" src="images/logo.svg" height=60px;>
     </div>
-    <div class="container-2">
+    <div class="header">
         <div onclick="getMovies('latest')" class="box-1">
-            <div class="text">
-                <h2 class="text-1" align="end">Новинки 2018</h2>
+            <div class="categories">
+                <h2 align="end">Новинки 2018</h2>
             </div>
         </div>
         <div onclick="getMovies('latest')" class="box-2">
-            <div class="text">
-                <h2 class="text-1" align="end">Скоро в кинотеатрах</h2>
+            <div class="categories">
+                <h2 align="end">Скоро в кинотеатрах</h2>
             </div>
         </div>
         <div onclick="getMovies('latest')" class="box-3">
-            <div class="text">
-                <h2 class="text-1" align="end">В топ-чартах</h2>
+            <div class="categories">
+                <h2 align="end">В топ-чартах</h2>
             </div>
         </div>
     </div>
-    <div class="numb" style="text-align: center">
+    <div class="sortNumb" style="text-align: center">
         <input class="input" type="text" placeholder="Введите число">
-        <button class="but">Enter</button>
+        <button class="button">Enter</button>
     </div>
-    <div class="container-3">
-        <div class="box-4">
-            <div class="text-2">
-                <h3>
-                    Мультфильм
-                </h3>
-                <div class="text-3">
-                    <h1>
+    <div id="list">
+        <!-- <div class="divListItem">
+            <div class="textMovie">
+                <div class="genre">
+                    <h3 class="genre_1">
+                        Мультфильмы
+                    </h3>
+                </div>  
+                <div class="rating">
+                    <h1 class="rating_1">
                         4.8
                     </h1>
                 </div>
             </div>
-        </div>
+    </div> -->
     </div>
+
     <script type="text/javascript" src="index.js"></script>
 </body>
 
