--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div class="sortNumb" style="text-align: center">
+    <div class="sortNumb">
         <input class="input" type="text" placeholder="Введите число">
         <button class="button">Enter</button>
     </div>
