--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <img onclick="getMovies('latest')" src="images/logo.svg" height=60px;>
     </div>
     <div class="header">
-        <div onclick="getMovies('latest')" class="box-1">
+        <div onclick="getMovies('latest')" class="movies_box movie_1">
             <div class="categories">
                 <h2 align="end">Новинки 2018</h2>
             </div>
         </div>
-        <div onclick="getMovies('latest')" class="box-2">
+        <div onclick="getMovies('latest')" class="movies_box movie_2">
             <div class="categories">
                 <h2 align="end">Скоро в кинотеатрах</h2>
             </div>
         </div>
-        <div onclick="getMovies('latest')" class="box-3">
+        <div onclick="getMovies('latest')" class="movies_box movie_3">
             <div class="categories">
                 <h2 align="end">В топ-чартах</h2>
             </div>
