--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <h2 align="end">Новинки 2018</h2>
             </div>
         </div>
-        <div onclick="getMovies('latest')" class="movies_box movie_2">
+        <div onclick="getMovies('upcoming')" class="movies_box movie_2">
             <div class="categories">
                 <h2 align="end">Скоро в кинотеатрах</h2>
             </div>
         </div>
-        <div onclick="getMovies('latest')" class="movies_box movie_3">
+        <div onclick="getMovies('popular')" class="movies_box movie_3">
             <div class="categories">
                 <h2 align="end">В топ-чартах</h2>
             </div>
