--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <img src="images/logo.svg" height="10%" />
     </div>
     <div class="movies">
-      <div onclick="getMovies('latest')" class="movies__box movie_1">
+      <div onclick="getMovies('latest', 20)" class="movies__box movie_1">
         <h2 class="text">Новинки 2018</h2>
       </div>
-      <div onclick="getMovies('upcoming')" class="movies__box movie_2">
+      <div onclick="getMovies('upcoming', 20)" class="movies__box movie_2">
         <h2 class="text">Скоро в кинотеатрах</h2>
       </div>
-      <div onclick="getMovies('popular')" class="movies__box movie_3">
+      <div onclick="getMovies('popular', 20)" class="movies__box movie_3">
         <h2 class="text">В топ-чартах</h2>
       </div>
     </div>
@@ -26,16 +26,6 @@
       <button class="button">Enter</button>
     </div>
     <div id="list">
-      <div class="list__item">
-        <div class="poster">
-          <span class="genre">Мультфильм Static</span>
-          <img
-            src="https://image.tmdb.org/t/p/w500/927lqua6AHPW4mUflU26yV3APKZ.jpg"
-          />
-          <span class="rating">4.5</span>
-        </div>
-        <span class="title">Movie title</span>
-      </div>
     </div>
     <script type="text/javascript" src="index.js"></script>
   </body>
